--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.3",
+        "autoprefixer": "^10.4.14",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
     }
 }
