--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.14",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.23",
@@ -13,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "daisyui": "^2.51.6"
+        "daisyui": "^2.51.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
